// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid tests should render correctly 1`] = `
<section>
  <h3
    className="title animate__animated animate__slideInRight"
  >
    sol
  </h3>
  <section
    className="image-grid"
  />
</section>
`;

exports[`GifGrid tests should render with mock change 1`] = `
<section>
  <h3
    className="title animate__animated animate__slideInRight"
  >
    luna
  </h3>
  <section
    className="image-grid"
  />
</section>
`;
